@@ -1,3 +1,8 @@
+2000-06-27  Michael Meeks  <michael@helixcode.com>
+
+	* hello-view.c (view_clicked_cb): prettify.
+	kill redundant prototypes.
+
 2000-06-26  Michael Meeks  <michael@helixcode.com>
 
 	* hello-object-io.c (hello_object_stream_read): kill, move to
